# facilitio

./: 235.index.js  Cargo.toml  README.md  index.77c5f588d28a767941a5.js  index.844472b7545c3043a115.js  index.d95e52929e80f2d65985.js  index.html  index.js  z3-built.js  z3-built.worker.js
.github/workflows/: pages.yml
facilitio-web/: Cargo.toml  index.html  index.js  load_z3.ts  package-lock.json  package.json  webpack.config.js  z3.ts
facilitio-web/src/: lib.rs
